tests/paczka2/big_fuzzy/58350835.err
Error in line 9: gFyeT S55 -3,9
Error in line 12: HwYe S356 44,1
Error in line 6: gFyeT S55 52,4
Error in line 15: A328 S299 5,4
Error in line 20: A328 A328 55,3
Error in line 34: 8riDFXRS7 S55 44,1
Error in line 35: 8riDFXRS7 A328 56,6
Error in line 59: A328 S3G6 67,6
Error in line 49: uuB9qrHvVDE A328 8,3
Error in line 78: uuB9qrHvVDE S356 295,1
Error in line 74: HwYe S356 56,8
Error in line 66: OPOkEBAT A328 67,5
Error in line 96: A328 S299 91,2
Error in line 105: 8riDFXRS7 S299 68,3
Error in line 107: A328 S55 34,2
Error in line 113: A328 A328 11,3
Error in line 119: 8riDFXRS7 S356 92,1
Error in line 122: 3qkUVS99I12 S299 61,2
Error in line 121: A328 S55 28,1
Error in line 126: A328 A328 1,1
Error in line 131: uuB9qrHvVDE Sææ 234,6
Error in line 129: uuB9qrHvVDE S55 89,2
Error in line 138: gFyeT S55 59,2
Error in line 149: 8riDFXRS7 S356 92,6
Error in line 150: 8riDFXRS7 S55 51,2
Error in line 141: gFyeT S299 93,8
Error in line 152: 8riDFXRS7 A328 69,2
Error in line 175: 3qkUVS99I12 A328 2,2
Error in line 163: OPOkEBAT S356 43,6
Error in line 199: gFyeT A328 58,6
Error in line 208: 3qkUVS99I12 A328 73,8
Error in line 213: gFyeT S299 310,9
Error in line 210: 8riDFXRS7 A328 11,2
Error in line 217: 8riDFXRS7 S55 15,00
Error in line 216: 8riDFXRS7 S299 73,5
Error in line 214: gFyeT S55 77,6
Error in line 219: 8riDFXRS7 S55 2,4
Error in line 227: A328 S55 40,6
Error in line 232: 8riDFXRS7 A328 73,7
Error in line 237: gFyeT S356 35,7
Error in line 238: 8riDFXRS7 S299 61,9
Error in line 246: 8riDFXRS7 S55 20,9
